compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__module_named_inspect.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 198
expression: "\nimport other/inspect\n\npub fn main() {\n  echo inspect.x\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

import other/inspect

pub fn main() {
  echo inspect.x
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import * as $inspect from "../../other/other/inspect.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  return echo($inspect.x, undefined, "src/module.gleam", 5);
}

// ...omitted code from `templates/echo.mjs`...
