compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__multiple_echos_in_a_pipeline.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 180
expression: "\npub fn main() {\n  [1, 2, 3]\n  |> echo\n  |> wibble\n  |> echo\n  |> wibble\n  |> echo\n}\n\npub fn wibble(n) { n }\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  [1, 2, 3]
  |> echo
  |> wibble
  |> echo
  |> wibble
  |> echo
}

pub fn wibble(n) { n }


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  toList,
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function wibble(n) {
  return n;
}

export function main() {
  let _pipe = toList([1, 2, 3]);
  echo(_pipe, undefined, "src/module.gleam", 4)
  let _pipe$1 = wibble(_pipe);
  echo(_pipe$1, undefined, "src/module.gleam", 6)
  let _pipe$2 = wibble(_pipe$1);
  return echo(_pipe$2, undefined, "src/module.gleam", 8);
}

// ...omitted code from `templates/echo.mjs`...
