compiler-core/main/__generate/javascript/tests/snapshots/gleam_core____generate__javascript__tests__echo__multiple_echos_inside_expression.snap
---
source: compiler-core/src_refactored/__generate/javascript/tests/echo.rs
assertion_line: 73
expression: "\npub fn main() {\n  echo 1\n  echo 2\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  echo 1
  echo 2
}


----- COMPILED JAVASCRIPT
import * as $stdlib$dict from "../../gleam_stdlib/gleam/dict.mjs";
import {
  Empty as $Empty,
  NonEmpty as $NonEmpty,
  CustomType as $CustomType,
  bitArraySlice,
  bitArraySliceToInt,
  BitArray as $BitArray,
  List as $List,
  UtfCodepoint as $UtfCodepoint,
} from "../gleam.mjs";

export function main() {
  echo(1, undefined, "src/module.gleam", 3);
  return echo(2, undefined, "src/module.gleam", 4);
}

// ...omitted code from `templates/echo.mjs`...
